--- a/html/zh-CN.html
+++ b/html/zh-CN.html
@@ -10,6 +10,7 @@
       }
       body {
         max-width: 800px;
+        max-width: min(800px, calc(100vw - 2em));
         margin: 0 auto;
         line-height: 2em;
       }
