:up: Update zh-CN add en-US

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>BFChain License</h1>
     <ul>
       <li><a href="./html/zh-CN.html">中文版</a></li>
+      <li><a href="./html/en-US.html">English</a></li>
     </ul>
   </body>
 </html>
