--- a/html/en-US.html
+++ b/html/en-US.html
@@ -1,9 +1,9 @@
-<html lang="zh-CN">
+<html lang="en-US">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BFChain 软件开源许可协议</title>
+    <title>Software License</title>
     <style>
       html {
         font-family: "苹方", "San Francisco", "微软雅黑", "Microsoft YaHei";
@@ -25,73 +25,93 @@
     </style>
   </head>
   <body>
-    <h1>BFChain 软件开源许可协议</h1>
+    <h1>Software License</h1>
     <p>
-      通过行使本协议所授予的权利（定义如下），您接受并同意受到 BFChain
-      软件开源许可协议（以下简称“本软件开源协议”）的约束。从合同解释的角度来看，您获得授权的对价是接受本协议的条款，许可人授予您这些权利的对价是可以通过采用本协议条款发布授权作品(material)而获得利益。
+      By exercising the Licensed Rights (defined below), You accept and agree to
+      be bound by the terms and conditions of this Software License (“License”).
+      To the extent this License may be interpreted as a contract, You are
+      granted the Licensed Rights in consideration of Your acceptance of these
+      terms and conditions, and the Licensor grants You such rights in
+      consideration of benefits the Licensor receives from making the Licensed
+      Material available under these terms and conditions.
     </p>
-    <h2 id="s1">第一条 定义</h2>
+    <h2 id="s1">Section 1 – Definitions.</h2>
     <ol type="a">
       <li id="s1-1">
-        <strong>演绎作品(Adapted Material)：</strong>
-        指受到著作权与类似权利保护的，基于授权作品(Licensed
-        Material)而创作的作品(material)，例如对授权作品(Licensed
-        Material)的翻译、改编、编排、改写或其他依据著作权与类似权利需要获得所有人许可的修改。为本软件开源协议之目的，当授权作品(Licensed
-        Material)为音乐作品、表演或录音时，将其依时间序列关系与动态影像配合一致而形成的作品，视为演绎作品(Adapted
-        Material)。
+        <strong>Adapted Material</strong> means material subject to Copyright
+        and Similar Rights that is derived from or based upon the Licensed
+        Material and in which the Licensed Material is translated, altered,
+        arranged, transformed, or otherwise modified in a manner requiring
+        permission under the Copyright and Similar Rights held by the Licensor.
+        For purposes of this License, where the Licensed Material is a musical
+        work, performance, or sound recording, Adapted Material is always
+        produced where the Licensed Material is synched in timed relation with a
+        moving image.
       </li>
       <li id="s1-2">
-        <strong>演绎作者的许可：</strong>
-        指您依据本软件开源协议对在演绎作品(Adapted
-        Material)中自己所贡献的部分所享有的著作权与类似权利进行授权的协议。
+        <strong>Adapter’s License</strong> means the license You apply to Your
+        Copyright and Similar Rights in Your contributions to Adapted Material
+        in accordance with the terms and conditions of this License.
       </li>
       <li id="s1-3">
-        <strong>著作权与类似权利：</strong>
-        指著作权和/或与著作权紧密联系的类似权利。类似权利包括但不限于：表演者权、广播组织权、录音录像制作者权、以及数据库特别权利，而不论上述权利的定义和归类如何。为本软件开源协议之目的，
-        <a href="#s2-2">第二条 b 款第(1)项与第(2)项</a>
-        所列权利不属于著作权与类似权利。
+        <strong>Copyright and Similar Rights</strong> means copyright and/or
+        similar rights closely related to copyright including, without
+        limitation, performance, broadcast, sound recording, and Sui Generis
+        Database Rights, without regard to how the rights are labeled or
+        categorized. For purposes of this License, the rights specified in
+        Section 2(b)(1)-(2) are not Copyright and Similar Rights.
       </li>
       <li id="s1-4">
-        <strong>有效的技术措施：</strong>
-        指根据各司法管辖区遵循《世界知识产权组织版权条约》（1996 年 12 月 20
-        日通过）第十一条或类似国际协定项下的义务所制定的法律，在没有适当的授权的情况下，禁止使用者规避的技术措施。
+        <strong>Effective Technological Measures</strong> means those measures
+        that, in the absence of proper authority, may not be circumvented under
+        laws fulfilling obligations under Article 11 of the WIPO Copyright
+        Treaty adopted on December 20, 1996, and/or similar international
+        agreements.
       </li>
       <li id="s1-5">
-        <strong>例外与限制：</strong> 指合理使用(Fair Dealing and Fair
-        Use)和/或其他适用于您对授权作品(Licensed
-        Material)的使用的著作权与类似权利的例外或限制。
+        <strong>Exceptions and Limitations</strong> means fair use, fair
+        dealing, and/or any other exception or limitation to Copyright and
+        Similar Rights that applies to Your use of the Licensed Material. f.
+        Licensed Material means the artistic or literary work, database, or
+        other material to which the Licensor applied this License.
       </li>
       <li id="s1-6">
-        <strong>授权作品(Licensed Material)：</strong>
-        指许可人通过本软件开源协议授权的文学、艺术作品(artistic or literary
-        work)，数据库或其他作品(material)。
+        <strong>Licensed Rights</strong> means the rights granted to You subject
+        to the terms and conditions of this License, which are limited to all
+        Copyright and Similar Rights that apply to Your use of the Licensed
+        Material and that the Licensor has authority to license.
       </li>
       <li id="s1-7">
-        <strong>协议所授予的权利：</strong>
-        指依据本软件开源协议的条款和条件所授予您的各项权利，限于适用于您对授权作品(Licensed
-        Material)的使用且许可人有权许可的著作权与类似权利。
+        <strong>Licensor</strong> means the individual(s) or entity(ies)
+        granting rights under this License.
       </li>
       <li id="s1-8">
-        <strong>许可人：</strong> 指通过本软件开源协议进行授权的个人或组织。
+        <strong>Share</strong> means to provide material to the public by any
+        means or process that requires permission under the Licensed Rights,
+        such as reproduction, public display, public performance, distribution,
+        dissemination, communication, or importation, and to make material
+        available to the public including in ways that members of the public may
+        access the material from a place and at a time individually chosen by
+        them.
       </li>
       <li id="s1-9">
-        <strong>分享：</strong>
-        指以需要“协议所授予的权利”许可的任何方法或程序向公众提供作品(material)，包括复制、公共展示、公开表演、发行、散布、传播、进口或提供作品(material)给公众以便其能在其选定的时间和地点接收作品(material)。
+        <strong>Sui Generis Database Rights</strong> means rights other than
+        copyright resulting from Directive 96/9/EC of the European Parliament
+        and of the Council of 11 March 1996 on the legal protection of
+        databases, as amended and/or succeeded, as well as other essentially
+        equivalent rights anywhere in the world.
       </li>
       <li id="s1-10">
-        <strong>数据库特别权利：</strong> 指除了著作权之外，衍生于 1996 年 3 月
-        11 日通过的《欧洲议会与欧盟理事会关于数据库法律保护的指令》(Directive
-        96/9/EC)及其修改或后续版本的权利，或其他国家或地区本质上与之等同的权利。
+        <strong>You</strong> means the individual or entity exercising the
+        Licensed Rights under this License. Your has a corresponding meaning.
       </li>
       <li id="s1-11">
-        <strong>您：</strong>
-        指依据本软件开源协议行使其所获得授予之权利的个人或机构。 “您的”
-        有相应的含义。
-      </li>
-      <li id="s1-12">
-        <strong>非大型商业性使用：</strong>
-        指该使用的主要意图或者指向并非获取商业优势或金钱报酬。为本软件开源协议之目的，以数字文件共享或类似方式，用授权作品(Licensed
-        Material)交换其他受到著作权与类似权利保护的作品(material)是非规模企业商业性使用。
+        <strong>Non-Commercial</strong> means not primarily intended for or
+        directed towards commercial advantage or monetary compensation. For
+        purposes of this License, the exchange of the Licensed Material for
+        other material subject to Copyright and Similar Rights by digital
+        file-sharing or similar means is Non-Commercial provided there is no
+        payment of monetary compensation in connection with the exchange.
       </li>
     </ol>
     <h2 id="s2">第二条 授权范围</h2>
@@ -100,7 +120,7 @@
         <strong>授权</strong>
         <ol type="1">
           <li id="s2-1-1">
-            根据本软件开源协议的条款，许可人授予您在全球范围内，免费的、不可再许可、非独占、不可撤销的许可，以对授权作品(Licensed
+            根据本软件许可协议的条款，许可人授予您在全球范围内，免费的、不可再许可、非独占、不可撤销的许可，以对授权作品(Licensed
             Material)行使以下“协议所授予的权利”：
             <ol type="A">
               <li id="s2-1-1-1">
@@ -114,15 +134,15 @@
           <li id="s2-1-4">
             <u>例外和限制</u>
             为避免疑义，若著作权的例外和限制适用于您对授权作品(Licensed
-            Material)的使用，本软件开源协议将不适用，您也无须遵守本软件开源协议之条款。
+            Material)的使用，本软件许可协议将不适用，您也无须遵守本软件许可协议之条款。
           </li>
           <li id="s2-1-5">
-            <u>期限</u> 本软件开源协议的期限规定于<a href="#s6-1">第六条 a 款</a
+            <u>期限</u> 本软件许可协议的期限规定于<a href="#s6-1">第六条 a 款</a
             >。
           </li>
           <li id="s2-1-6">
             <u>媒介和形式；允许的技术修改</u>
-            许可人授权您在任何媒介以任何形式（不论目前已知的或未来出现的）行使本协议授予的权利，并为之进行必要的技术修改。许可人放弃和/或同意不主张任何权利以阻止您为了行使协议项下权利进行必要的技术修改，包括为规避有效技术措施所必须的技术修改。为了本软件开源协议之目的，
+            许可人授权您在任何媒介以任何形式（不论目前已知的或未来出现的）行使本协议授予的权利，并为之进行必要的技术修改。许可人放弃和/或同意不主张任何权利以阻止您为了行使协议项下权利进行必要的技术修改，包括为规避有效技术措施所必须的技术修改。为了本软件许可协议之目的，
             基于<a href="#s2-1-4">第二条 a 款第(4)项</a>
             进行的技术修改不构成演绎作品(Adapted Material)。
           </li>
@@ -132,7 +152,7 @@
               <li id="s2-1-7-1">
                 <u>来自许可人的要约——授权作品(Licensed Material)</u>
                 本授权作品(Licensed
-                Material)的每一个后续接受者都自动取得许可人的要约，以按照本软件开源协议的条款行使协议授予的权利。
+                Material)的每一个后续接受者都自动取得许可人的要约，以按照本软件许可协议的条款行使协议授予的权利。
               </li>
               <li id="s2-1-7-2">
                 <u>禁止下游限制</u> 若会限制授权作品(Licensed
@@ -143,7 +163,7 @@
           </li>
           <li id="s2-1-10">
             <u>并非背书</u>
-            本软件开源协议不构成、或不得被解释为允许您声明或主张：您或您对授权作品(Licensed
+            本软件许可协议不构成、或不得被解释为允许您声明或主张：您或您对授权作品(Licensed
             Material)的使用与许可人或
             <a href="#s3-1-1-1-1">第三条 a 款第(1)项(A)目(i)</a
             >所规定要求提供署名的权利人相关联，或得到其赞助、同意或被授予正式地位。
@@ -154,11 +174,11 @@
         <strong>其他权利</strong>
         <ol type="1">
           <li id="s2-12-1">
-            依据本软件开源协议，著作人身权，例如保护作品完整权、形象权、隐私权或其他类似的人格权利，不在许可范围内。但是，在条件允许的情况下，许可人可以在必要范围内放弃和/或同意不主张其权利，以便您行使本协议所授予的权利。
+            依据本软件许可协议，著作人身权，例如保护作品完整权、形象权、隐私权或其他类似的人格权利，不在许可范围内。但是，在条件允许的情况下，许可人可以在必要范围内放弃和/或同意不主张其权利，以便您行使本协议所授予的权利。
           </li>
-          <li id="s2-12-2">本软件开源协议不适用于任何专利权或商标权许可。</li>
+          <li id="s2-12-2">本软件许可协议不适用于任何专利权或商标权许可。</li>
           <li id="s2-12-3">
-            在自愿的或可放弃的法定或强制许可机制下，许可人在范围内放弃对您因行使本协议所授予的权利而产生的使用费的权利，不论是直接收取或通过集体管理组织收取。在其他任何情况下（包括授权作品(Licensed
+            在自愿的或可放弃的法定或强制许可机制下，许可人在最大可能范围内放弃对您因行使本协议所授予的权利而产生的使用费的权利，不论是直接收取或通过集体管理组织收取。在其他任何情况下（包括授权作品(Licensed
             Material)被大规模商业性使用的情形），许可人明确保留收取使用费的任何权利。
           </li>
         </ol>
@@ -182,7 +202,7 @@
                     Material)创作者和其他被指定署名的人的身份（包括指定的笔名）；
                   </li>
                   <li id="s3-1-1-1-2">著作权声明；</li>
-                  <li id="s3-1-1-1-3">有关本软件开源协议的声明；</li>
+                  <li id="s3-1-1-1-3">有关本软件许可协议的声明；</li>
                   <li id="s3-1-1-1-4">有关免责的声明；</li>
                   <li id="s3-1-1-1-5">
                     在合理可行情况下，本授权作品(Licensed
@@ -196,7 +216,7 @@
               </li>
               <li id="s3-1-1-8">
                 表明授权作品(Licensed
-                Material)依据本软件开源协议授权，并提供本软件开源协议全文，或者本软件开源协议的网址(URI)或超链接。
+                Material)依据本软件许可协议授权，并提供本软件许可协议全文，或者本软件许可协议的网址(URI)或超链接。
               </li>
             </ol>
           </li>
@@ -217,7 +237,7 @@
           <li id="s3-1-12">
             如果您分享您创作的演绎作品（Adapted
             Material），您适用的“演绎作者的许可”协议，不得使演绎作品（Adapted
-            Material）的接收者无法遵守本软件开源协议。
+            Material）的接收者无法遵守本软件许可协议。
           </li>
         </ol>
       </li>
@@ -245,7 +265,7 @@
     <p>
       为避免疑义，当协议所授予的权利包含其他著作权与类似权利时，<a href="#s4"
         >第四条</a
-      >补充且不取代本软件开源协议所规定的您的义务。
+      >补充且不取代本软件许可协议所规定的您的义务。
     </p>
     <h2 id="s5">第五条 免责声明及责任限制条款</h2>
     <ol type="a">
@@ -259,7 +279,7 @@
       </li>
       <li id="s5-2">
         <strong
-          >在最大可能范围内， 对于任何因本软件开源协议或使用授权作品(Licensed
+          >在最大可能范围内， 对于任何因本软件许可协议或使用授权作品(Licensed
           Material)引起的直接的、特殊的、间接的、附随的、连带的、惩罚性的、警告性的，或其他的损失、成本、费用或损害，许可人不对您负任何法律上或其他的责任（包括但不限于过失责任）。当责任限制部分或全部不被允许时，该限制不适用于您。</strong
         >
       </li>
@@ -271,7 +291,7 @@
     <ol type="a">
       <li id="s6-1">
         <p>
-          本软件开源协议在著作权与类似权利存续期间内有效。然而，如果您没有遵守此公共许可协议，则您依据此公共许可协议享有的权利自动终止。
+          本软件许可协议在著作权与类似权利存续期间内有效。然而，如果您没有遵守此公共许可协议，则您依据此公共许可协议享有的权利自动终止。
         </p>
       </li>
       <li id="s6-2">
@@ -288,15 +308,15 @@
           <li id="s6-2-2">根据许可人明示恢复权利的意思表达。</li>
         </ol>
         <p>
-          为避免疑义，本软件开源协议<a href="#s6-2">第六条 b 款</a>
-          不影响许可人就您违反本软件开源协议的行为寻求法律救济。
+          为避免疑义，本软件许可协议<a href="#s6-2">第六条 b 款</a>
+          不影响许可人就您违反本软件许可协议的行为寻求法律救济。
         </p>
       </li>
       <li id="s6-5">
         <p>
           为避免疑义，许可人也可在任何时间，以另外的条款或条件提供本授权作品(Licensed
           Material)，或者停止传播本授权作品(Licensed
-          Material)；然而，许可人此种行为不会终止本软件开源协议。
+          Material)；然而，许可人此种行为不会终止本软件许可协议。
         </p>
       </li>
       <li id="s6-6">
@@ -304,7 +324,7 @@
           本协议<a href="#s1">第一</a>、<a href="#s5">五</a>、<a href="#s6"
             >六</a
           >、<a href="#s7">七</a>及第<a href="#s8">八</a
-          >条，不因本软件开源协议终止而失效。
+          >条，不因本软件许可协议终止而失效。
         </p>
       </li>
     </ol>
@@ -314,24 +334,24 @@
         除非明示同意，否则许可人不受您表达的任何附加或不同条款或条件约束。
       </li>
       <li id="s7-2">
-        本软件开源协议未提及的关于授权作品(Licensed
-        Material)之任何安排、共识或协议，不属于且独立于本软件开源协议的条款及条件。
+        本软件许可协议未提及的关于授权作品(Licensed
+        Material)之任何安排、共识或协议，不属于且独立于本软件许可协议的条款及条件。
       </li>
     </ol>
     <h2 id="s8">第八条 解释</h2>
     <ol type="a">
       <li id="s8-1">
-        为避免疑义，本软件开源协议不会也不应被解释为减少、限制、约束或施加条件于无需本软件开源协议授权即可依法行使的对授权作品(Licensed
+        为避免疑义，本许可协议不会也不应被解释为减少、限制、约束或施加条件于无需本软件许可协议授权即可依法行使的对授权作品(Licensed
         Material)的任何使用。
       </li>
       <li id="s8-2">
-        在最大可能范围内，如果本软件开源协议的任何条款被视为无法执行，该条款在必要的最小限度内，自动调整至可以执行。如果该条款不能被调整，其应自本软件开源协议中排除适用，不影响其余条款的效力。
+        在最大可能范围内，如果本软件许可协议的任何条款被视为无法执行，该条款在必要的最小限度内，自动调整至可以执行。如果该条款不能被调整，其应自本软件许可协议中排除适用，不影响其余条款的效力。
       </li>
       <li id="s8-3">
-        除非许可人明示同意，本软件开源协议的任何条款或条件均不得放弃。
+        除非许可人明示同意，本软件许可协议的任何条款或条件均不得放弃。
       </li>
       <li id="s8-4">
-        本软件开源协议条款不构成、也不得被解释为限制或者放弃适用于许可人或您的特权或豁免，包括豁免于任何司法管辖区或行政机构的法律程序。
+        本软件许可协议条款不构成、也不得被解释为限制或者放弃适用于许可人或您的特权或豁免，包括豁免于任何司法管辖区或行政机构的法律程序。
       </li>
     </ol>
   </body>
