:book: 完善英文版和中文版

--- a/html/zh-CN.html
+++ b/html/zh-CN.html
@@ -22,6 +22,22 @@
       p {
         text-indent: 2em;
       }
+      u {
+        text-decoration: unset;
+      }
+      html[lang="en-US"] {
+        text-align: justify;
+      }
+      html[lang="en-US"] #s5 + ol strong {
+        text-transform: uppercase;
+        font-weight: normal;
+      }
+      html[lang="en-US"] #s5-1::marker {
+        text-transform: uppercase;
+      }
+      html[lang="en-US"] #s5-2::marker {
+        text-transform: uppercase;
+      }
     </style>
   </head>
   <body>
@@ -113,35 +129,44 @@
           </li>
           <li id="s2-1-4">
             <u>例外和限制</u>
-            为避免疑义，若著作权的例外和限制适用于您对授权作品(Licensed
-            Material)的使用，本软件开源协议将不适用，您也无须遵守本软件开源协议之条款。
+            <ol type="A">
+              <li id="s2-1-4-1">
+                为避免疑义，若著作权的例外和限制适用于您对授权作品(Licensed
+                Material)的使用，本软件开源协议将不适用，您也无须遵守本软件开源协议之条款。
+              </li>
+              <li id="s2-1-4-2">
+                如您需要进行大规模商业性使用，请以电子邮件的形式将您的商业用途以及个人/组织信息等相关内容发送至邮箱
+                <a href="mailto://license@bfchain.org">license@bfchain.org</a>
+                与许可人联系购买授权。
+              </li>
+            </ol>
           </li>
-          <li id="s2-1-5">
+          <li id="s2-1-7">
             <u>期限</u> 本软件开源协议的期限规定于<a href="#s6-1">第六条 a 款</a
             >。
           </li>
-          <li id="s2-1-6">
+          <li id="s2-1-8">
             <u>媒介和形式；允许的技术修改</u>
             许可人授权您在任何媒介以任何形式（不论目前已知的或未来出现的）行使本协议授予的权利，并为之进行必要的技术修改。许可人放弃和/或同意不主张任何权利以阻止您为了行使协议项下权利进行必要的技术修改，包括为规避有效技术措施所必须的技术修改。为了本软件开源协议之目的，
             基于<a href="#s2-1-4">第二条 a 款第(4)项</a>
             进行的技术修改不构成演绎作品(Adapted Material)。
           </li>
-          <li id="s2-1-7">
+          <li id="s2-1-9">
             <u>后续接受者</u>
             <ol type="A">
-              <li id="s2-1-7-1">
+              <li id="s2-1-9-1">
                 <u>来自许可人的要约——授权作品(Licensed Material)</u>
                 本授权作品(Licensed
                 Material)的每一个后续接受者都自动取得许可人的要约，以按照本软件开源协议的条款行使协议授予的权利。
               </li>
-              <li id="s2-1-7-2">
+              <li id="s2-1-9-2">
                 <u>禁止下游限制</u> 若会限制授权作品(Licensed
                 Material)后续接受者行使本协议所授予的权利，则您不得对授权作品(Licensed
                 Material)提出或增加任何额外的或不同的条款，或使用任何有效技术措施。
               </li>
             </ol>
           </li>
-          <li id="s2-1-10">
+          <li id="s2-1-12">
             <u>并非背书</u>
             本软件开源协议不构成、或不得被解释为允许您声明或主张：您或您对授权作品(Licensed
             Material)的使用与许可人或
@@ -150,16 +175,20 @@
           </li>
         </ol>
       </li>
-      <li id="s2-12">
+      <li id="s2-14">
         <strong>其他权利</strong>
         <ol type="1">
-          <li id="s2-12-1">
+          <li id="s2-14-1">
             依据本软件开源协议，著作人身权，例如保护作品完整权、形象权、隐私权或其他类似的人格权利，不在许可范围内。但是，在条件允许的情况下，许可人可以在必要范围内放弃和/或同意不主张其权利，以便您行使本协议所授予的权利。
           </li>
-          <li id="s2-12-2">本软件开源协议不适用于任何专利权或商标权许可。</li>
-          <li id="s2-12-3">
-            在自愿的或可放弃的法定或强制许可机制下，许可人在范围内放弃对您因行使本协议所授予的权利而产生的使用费的权利，不论是直接收取或通过集体管理组织收取。在其他任何情况下（包括授权作品(Licensed
-            Material)被大规模商业性使用的情形），许可人明确保留收取使用费的任何权利。
+          <li id="s2-14-2">本软件开源协议不适用于任何专利权或商标权许可。</li>
+          <li id="s2-14-3">
+            在自愿的或可放弃的法定或强制许可机制下，许可人在<a href="@s2-1-1"
+              >第二条 a 款第(1)项</a
+            >规定的范围内放弃对您因行使本协议所授予的权利而产生的使用费的权利，不论是直接收取或通过集体管理组织收取。在其他任何情况下（包括授权作品(Licensed
+            Material)被大规模商业性使用的情形），许可人明确保留收取使用费的任何权利，请以电子邮件的形式将您的商业用途以及个人/组织信息等相关内容发送至邮箱
+            <a href="mailto://license@bfchain.org">license@bfchain.org</a>
+            与许可人联系购买授权。
           </li>
         </ol>
       </li>
