--- a/html/en-US.html
+++ b/html/en-US.html
@@ -44,7 +44,7 @@
     <h1>Software License</h1>
     <p>
       By exercising the Licensed Rights (defined below), You accept and agree to
-      be bound by the terms and conditions of this Software License (“License”).
+      be bound by the terms and conditions of this Software License ("License").
       To the extent this License may be interpreted as a contract, You are
       granted the Licensed Rights in consideration of Your acceptance of these
       terms and conditions, and the Licensor grants You such rights in
